# hexagon-engine

./: .gitignore  .travis.yml  BackendAPI_8hpp.html  BackendAPI_8hpp__dep__incl.dot  BackendAPI_8hpp__dep__incl.md5  BackendAPI_8hpp__incl.dot  BackendAPI_8hpp__incl.md5  BackendAPI_8hpp_source.html  BufferGL_8hpp.html  BufferGL_8hpp__dep__incl.dot  BufferGL_8hpp__dep__incl.md5  BufferGL_8hpp__incl.dot  BufferGL_8hpp__incl.md5  BufferGL_8hpp_source.html  CMakeLists.txt  CMakeSettings.json  Config_8hpp.html  Config_8hpp__dep__incl.dot  Config_8hpp__dep__incl.md5  Config_8hpp_source.html  Constants_8hpp.html  Constants_8hpp_source.html  DeviceGL_8cpp.html  DeviceGL_8cpp__incl.dot  DeviceGL_8cpp__incl.md5  DeviceGL_8hpp.html  DeviceGL_8hpp__dep__incl.dot  DeviceGL_8hpp__dep__incl.md5  DeviceGL_8hpp__incl.dot  DeviceGL_8hpp__incl.md5  DeviceGL_8hpp_source.html  Doxyfile  Event_8hpp.html  Event_8hpp__dep__incl.dot  Event_8hpp__dep__incl.md5  Event_8hpp__incl.dot  Event_8hpp__incl.md5  Event_8hpp_source.html  FrameBufferGL_8hpp.html  FrameBufferGL_8hpp__dep__incl.dot  (+805 more)
.github/workflows/: main.yml
Dependencies/SDL2/: sdl2-config.cmake
Docs/: CodingStyle.md
Example/: Audio.cpp  Basic.cpp
Script/: WindowsCI.py
Source/: CMakeLists.txt  Config.h  Config.hpp  Hx.h  Hx.hpp
Source/Engine/: CMakeLists.txt  Types.h  Types.hpp
Source/Engine/Audio/: Audio.hpp  BasicMixerChannel.cpp  BasicMixerChannel.hpp  IAudioDevice.hpp  MixerChannel.cpp  MixerChannel.hpp  MixerEngine.cpp  MixerEngine.hpp  Mod.hpp  Music.hpp
Source/Engine/Audio/Native/SDL2/: AudioDeviceSDL2.cpp  AudioDeviceSDL2.hpp  AudioEngineSDL2.cpp  AudioEngineSDL2.hpp
Source/Engine/Math/: BBox2D.hpp  BoundingBox2.hpp  BoundingBox3.hpp  Common.h  Common.hpp  Math.h  Matrix.h  Mod.hpp  StdMath.h  StdMath.hpp  Transformation.hpp  Vec2.h  Vec2.hpp  Vec3.h  Vec3.hpp  Vec4.h  Vec4.hpp
Source/Engine/Renderer/Backend/: BackendAPI.h  BackendAPI.hpp  Common.h  Common.hpp  IBuffer.h  IBuffer.hpp  IContext.h  IDeferredContext.h  IDeferredRenderContext.h  IDeferredRenderContext.hpp  IDepthStencilBuffer.h  IDepthStencilBuffer.hpp  IDepthStencilState.h  IDepthStencilState.hpp  IDevice.h  IDevice.hpp  IFrameBuffer.h  IFrameBuffer.hpp  IIndexBuffer.h  IPixelShader.h  IPixelShader.hpp  IRenderContext.h  IRenderContext.hpp  ISamplerState.h  ISamplerState.hpp  IShaderProgram.h  IShaderProgram.hpp  ITexture1D.h  ITexture1D.hpp  ITexture2D.h  ITexture2D.hpp  ITexture3D.h  ITexture3D.hpp  ITextureBase.h  ITextureBase.hpp  IUniformBuffer.h  IVertexBuffer.h  IVertexDecl.h  IVertexShader.h  IVertexShader.hpp  (+2 more)
Source/Engine/Renderer/Backend/GL/: BufferGL.h  BufferGL.hpp  Common.h  Common.hpp  ContextGL.cpp  ContextGL.h  DeviceGL.cpp  DeviceGL.h  DeviceGL.hpp  FrameBufferGL.h  FrameBufferGL.hpp  GLConstants.cpp  GLConstants.h  GLConstants.hpp  GLUtils.cpp  InitGL.cpp  InitSDL2.cpp  PixelShaderGL.h  PixelShaderGL.hpp  RenderContextGL.cpp  RenderContextGL.h  RenderContextGL.hpp  SamplerStateGL.h  SamplerStateGL.hpp  ShaderProgramGL.h  ShaderProgramGL.hpp  Texture1DGL.h  Texture1DGL.hpp  Texture2DGL.h  Texture2DGL.hpp  Texture3DGL.h  Texture3DGL.hpp  VertexDeclGL.h  VertexShaderGL.h  VertexShaderGL.hpp  VertexStreamGL.h  VertexStreamGL.hpp
Source/Engine/Renderer/Backend/GL/glad/: glad.c  glad.h
Source/Engine/Utils/Container/: Vector.h
Source/Engine/Window/: Event.cpp  Event.h  Event.hpp  Keyboard.h  Keyboard.hpp  Window.cpp  Window.h  Window.hpp  lib.cpp
Source/Engine/Window/Native/: INativeWindow.h  INativeWindow.hpp
Source/Engine/Window/Native/Null/: WindowNull.cpp  WindowNull.h  WindowNull.hpp
Source/Engine/Window/Native/SDL2/: KeymapSDL2.h  KeymapSDL2.hpp  WindowSDL2.cpp  WindowSDL2.h  WindowSDL2.hpp
Test/: CMakeLists.txt  Main.cpp  Window.cpp  main.cpp
Test/Math/: Matrix.h
Window/: lib.cpp
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+97 more)
